Add sign up test with invalid email